# minimax-python

./: minimax.py  pyproject.toml  setup.py
src/: state.py
test/: test_minimax.py
