[tool.poetry]
name = "minimax"
version = "0.0.2"
description = "Minimax algorithm"
authors = ["Jay Harris <jaywritescode@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
